--- a/ProNet_Sotfware_Services/css/header.css
+++ b/ProNet_Sotfware_Services/css/header.css
@@ -11,9 +11,19 @@ header {
     align-items: center;
 }
 
+h1 {
+    margin-right: 10px;
+    float: start;
+    color: #fff;
+}
+
+h2 {
+    font-size: 15px;
+    color: #fff;
+}
+
 header img {
     max-width: 500px;
     max-height: 474px;
-    position: absolute;
-    right: 100px;
+
 }
