--- a/ProNet_Sotfware_Services/css/nav.css
+++ b/ProNet_Sotfware_Services/css/nav.css
@@ -30,3 +30,13 @@ nav ul li a {
     font-weight: 600;
     transition: 0.7s;
 }
+
+.logo {
+    position: relative;
+    color: #fff;
+    font-weight: bold;
+    font-size: 2em;
+    letter-spacing: 3px;
+    transition: 1.5s;
+    text-decoration: none;
+}
