--- a/ProNet_Sotfware_Services/css/nav.css
+++ b/ProNet_Sotfware_Services/css/nav.css
@@ -1,42 +1,91 @@
-@import url('https://fonts.googleapis.com/css2?family=Jost:ital@1&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Jost:ital@1&display=swap");
 
 nav {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    display: flex;
-    justify-content: space-around;
-    transition: 0.7s;
-    padding: 20px 20px;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+  transition: 0.7s;
+  padding: 20px 20px;
 }
 nav ul {
-    position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 nav ul li {
-    list-style: none;
+  list-style: none;
 }
 nav ul li a {
-    font-family: 'Jost', sans-serif;
-    position: relative;
-    margin: 0 15px;
-    text-decoration: none;
-    color: #fff;
-    letter-spacing: 2px;
-    font-size: 15px;
-    font-weight: 600;
-    transition: 0.7s;
+  font-family: "Jost", sans-serif;
+  position: relative;
+  margin: 0 15px;
+  text-decoration: none;
+  color: #fff;
+  letter-spacing: 2px;
+  font-size: 15px;
+  font-weight: 600;
+  transition: 0.7s;
 }
 
-.logo {
-    position: relative;
-    color: #fff;
-    font-weight: bold;
-    font-size: 2em;
-    letter-spacing: 3px;
-    transition: 1.5s;
-    text-decoration: none;
+.title {
+  color: #fff;
+  font-weight: bold;
+  font-size: 2em;
+  letter-spacing: 3px;
+  transition: 1.5s;
+  text-decoration: none;
+}
+
+.checkbtn {
+  display: block;
+  float: right;
+  margin-top: 9px;
+}
+
+.checkbtn img {
+  height: 40px;
+  width: 45px;
+  filter: invert(100%);
+  object-fit: cover;
+}
+
+.menu-icon {
+  display: block;
+  position: fixed;
+  top: 20px;
+  right: 20px;
+  cursor: pointer;
+}
+
+#check,
+.checkbtn {
+  display: none;
+}
+#check:checked ~ ul {
+  left: 500px;
+  margin-right: 10px;
+  display: inline-block;
+  transition: all 1s;
+}
+
+.icon2 {
+  color: #fff;
+}
+
+@media (max-width: 900px) {
+  nav ul {
+    position: absolute;
+    left: 100rem;
+  }
+
+  .checkbtn {
+    display: initial;
+  }
+  nav {
+    justify-content: start;
+  }
 }
