creacion del main, breve descripcion de las actividades que se realizan en la empresa, iconos subidos, modificaciones de ciertos aspectos de l0os estilos, como por ejemplo los @import

--- a/ProNet_Sotfware_Services/css/header.css
+++ b/ProNet_Sotfware_Services/css/header.css
@@ -1,6 +1,4 @@
-:root {
-    --dark-blue:#060922;
-}
+@import "colors.css";
 
 header {
     position: relative;
@@ -20,6 +18,10 @@ h1 {
 h2 {
     font-size: 15px;
     color: #fff;
+}
+h3{
+    font-size: 13px;
+    color: var(--font);
 }
 
 header img {
