--- a/ProNet_Sotfware_Services/css/main.css
+++ b/ProNet_Sotfware_Services/css/main.css
@@ -1,4 +1,7 @@
 @import "colors.css";
+* {
+    border: 1px solid black;
+}
 .main{
     background: var(--dark-blue);
 }
@@ -23,26 +26,23 @@
 }
 .main-items-container{
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     gap: 20px;
 }
 .main-items{
-    padding:0;
+    padding: 20px;
     margin:0;
     width: 300px;
     border: 3px solid var(--dark-border);
     border-radius: 10px;
     background: var(--dark-blue-strong);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
+    display: inline-block;
     color: var(--font-secundary);
     
 }
 .main-items p{
-    text-align: center;
-    width: 90%;
+    text-align: left;
+    width: 100%;
     margin-bottom: 20px;
 }
 .main img{
