--- a/ProNet_Sotfware_Services/css/body.css
+++ b/ProNet_Sotfware_Services/css/body.css
@@ -10,6 +10,7 @@
 
 html {
   height: 100%;
+  scroll-behavior: smooth;
 }
 
 body {
@@ -17,12 +18,12 @@ body {
 }
 
 .grid-container > * {
-  box-shadow: -1px 1px 7px 0px rgba(0, 0, 0, 0.75);
   text-align: center;
 }
 
 .header {
   grid-area: header;
+  background: linear-gradient(var(--dark-blue),#1a0030 70rem);
 }
 .sidebar {
   grid-area: sidebar;
@@ -36,7 +37,6 @@ body {
 
 .grid-container {
   display: grid;
-  gap: 10px;
   grid-template:
     "header"  100vh
     "main"    auto
@@ -48,6 +48,17 @@ body {
   position: sticky;
   top: 0;
 }
+
+
+#check,
+.checkbtn {
+  display: none;
+}
+
+#check:checked ~ nav {
+ 
+}
+
 
 @media (min-width: 600px) {
   .grid-container {
