--- a/ProNet_Sotfware_Services/css/main.css
+++ b/ProNet_Sotfware_Services/css/main.css
@@ -5,6 +5,7 @@
 .main-container{
     max-width: 100vw;
     height: 65vh;
+    max-height: auto;
     position: relative;
     display: flex;
     flex-direction: column;
@@ -15,7 +16,7 @@
 
 .main-title{
     border: 1px solid var(--dark-border);
-    margin-bottom: auto;
+    margin-bottom: 20px;
     padding: 30px;
     width: 50%;
     border-radius: 10px;
@@ -25,6 +26,7 @@
     display: flex;
     justify-content: space-between;
     gap: 20px;
+    
 }
 .main-items{
     padding: 20px;
