--- a/ProNet_Sotfware_Services/css/nav.css
+++ b/ProNet_Sotfware_Services/css/nav.css
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Jost:ital@1&display=swap");
-
+@import "colors.css";
 nav {
   position: fixed;
   top: 0;
@@ -40,6 +40,12 @@ nav ul li a {
   font-size: 15px;
   font-weight: 600;
   transition: 0.7s;
+  padding: 5px;
+  border-radius: 7px;
+}
+nav ul li a:hover{
+  background: var(--pseudo-dark);
+  color: var(--font-secundary);
 }
 
 .title {
