ultimos cambios acerca de los terminos legales

--- a/ProNet_Sotfware_Services/css/main.css
+++ b/ProNet_Sotfware_Services/css/main.css
@@ -20,6 +20,7 @@
   width: 50%;
   border-radius: 10px;
   background: var(--dark-blue-strong);
+  margin-bottom: 30px;
 }
 .main-items-container {
   display: flex;
