--- a/ProNet_Sotfware_Services/css/terminos.css
+++ b/ProNet_Sotfware_Services/css/terminos.css
@@ -90,7 +90,41 @@ body {
 
 }
 
-.container-tyc{
-  width: 70%;
+.main{
+  width: 100%;
   height: 100vh;
+  display: flex; 
+  justify-content: center;
+}
+.container-tyc{
+  border: 3px solid var(--dark-border);
+  display: block;
+  width: 80%;
+  border-radius: 10px;
+  background: var(--dark-blue-strong);
+  align-items: center;
+}
+.tyc-title{
+  padding: 30px;
+  border-bottom: 5px solid var(--dark-blue);
+  background-color: var(--pseudo-dark);
+  width: 50%;
+  display: inline-block;
+  border-radius: 7px;
+}
+.tyc-container-two{
+  display: flex;
+  justify-content: space-around;
+}
+.container-tyc .tyc-1 img{
+  width: 400px;
+  height: 550px;
+  margin: 0;
+}
+.tyc-2{
+  width: 400px;
+  height: 550px;
+  display: flex;
+  flex-direction: column;
+  border: 1px solid red;
 }
