--- a/ProNet_Sotfware_Services/css/footer.css
+++ b/ProNet_Sotfware_Services/css/footer.css
@@ -65,6 +65,11 @@
 .footer .grupo-2 small {
   font-size: 15px;
 }
+
+.til p {
+  font-size: 12px;
+  
+}
 @media screen and (max-width: 800px) {
   .footer .grupo-1 {
     grid-template-columns: repeat(1, 1fr);
