--- a/ProNet_Sotfware_Services/css/about.css
+++ b/ProNet_Sotfware_Services/css/about.css
@@ -16,6 +16,7 @@
     width: 50%;
     justify-content: center;
     margin-bottom: 30px;
+    margin-top: 30px;
 }
 .about-container{
     display: flex;
