--- a/ProNet_Sotfware_Services/css/terminos.css
+++ b/ProNet_Sotfware_Services/css/terminos.css
@@ -92,7 +92,7 @@ body {
 
 .main{
   width: 100%;
-  height: 100vh;
+  height: 98vh;
   display: flex; 
   justify-content: center;
 }
@@ -120,7 +120,7 @@ body {
 .tyc-it{
   border: 2px solid white;
   border-radius: 5px;
-  padding: 0;
+  padding: 5px;
   margin:0;
   height: 80px;
   width: 100%;
@@ -136,7 +136,7 @@ body {
 .tyc-it-f{
   border: 2px solid white;
   border-radius: 5px;
-  padding: 0;
+  padding: 5px;
   margin:0;
   height: 150px;
   width: 100%;
